# Avox

./: .gitignore  CONTRIBUTING.md  Cargo.toml  PLAN.md  README.md  SECURITY.md
.github/workflows/: app.yml  ci.yml  release.yml
app/: README.md  package-lock.json  package.json  prepare-service.mjs
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: autostart.rs  lib.rs  main.rs
app/ui/: index.html  main.js  styles.css
crates/avox-core/: Cargo.toml
crates/avox-core/src/: lib.rs
crates/avox-engine/: Cargo.toml
crates/avox-engine/src/: lib.rs
crates/avox-ipc/: Cargo.toml
crates/avox-ipc/src/: lib.rs  transport.rs
crates/avox-service/: Cargo.toml
crates/avox-service/src/: config.rs  main.rs  quarantine.rs  scan.rs  scheduler.rs  server.rs
docs/: dev-setup.md
docs/adr/: 0001-clamd-via-ipc.md  0002-ipc-transport-framing.md  0003-gui-tauri-v2.md
packaging/: README.md
platform/: README.md
platform/linux/: avox-service.service
platform/macos/: org.avox.service.plist
