[workspace]
resolver = "2"
members = [
    "crates/avox-core",
    "crates/avox-ipc",
    "crates/avox-engine",
    "crates/avox-service",
]
# Die Tauri-GUI unter `app/` ist ein eigenständiges Crate (eigene Cargo.lock) und
# bewusst NICHT Teil dieses Workspaces, damit `cargo build --workspace` und die
# Kern-CI ohne Tauri/WebView-Systemabhängigkeiten grün bleiben.
exclude = ["app"]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "GPL-2.0-only"
authors = ["Avox Contributors"]
repository = "https://github.com/avox/avox"
rust-version = "1.75"

[workspace.dependencies]
avox-core = { path = "crates/avox-core" }
avox-ipc = { path = "crates/avox-ipc" }
avox-engine = { path = "crates/avox-engine" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = "thin"
