[package]
name = "avox-ipc"
description = "Gemeinsame Nachrichten-Typen für die IPC zwischen Avox-Service und GUI."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
avox-core.workspace = true
serde.workspace = true
serde_json.workspace = true
