[package]
name = "avox-service"
description = "Privilegierter Avox-Hintergrunddienst: Orchestrierung, Quarantäne, Updates, Zeitpläne."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "avox-service"
path = "src/main.rs"

[dependencies]
avox-core.workspace = true
avox-ipc.workspace = true
avox-engine.workspace = true
serde.workspace = true
serde_json.workspace = true
